--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -206,6 +206,14 @@
   -webkit-backface-visibility: hidden;
 }
 
+.records-list {
+  max-height: 250px;
+  overflow-y: auto;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  padding-right: 8px;
+}
+
 .modal-close {
   position: absolute;
   right: 0px;
