--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -173,12 +173,12 @@ html, body {
   position: fixed;
   top: 140px;     
   left: 40px;
-  width: 180px;      
-  height: 280px;
+  width: 215px;      
+  height: 300px;
   background-color: #ffffff;
   border: 2px solid #0c2a5b;
   border-radius: 10px;
-  padding: 12px;
+  padding: 15px;
   box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 10;
   display: flex;
@@ -191,7 +191,7 @@ html, body {
   font-weight: 700;
   color: #0c2a5b;
   text-align: center;
-  margin-bottom: 14px;
+  margin-bottom: 15px;
 }
 
 /* 待還項目 */
@@ -199,7 +199,7 @@ html, body {
   background-color: #ffffff;
   border: 2px solid #0c2a5b;
   border-radius: 8px;
-  padding: 10px 12px;
+  padding: 10px 10px;
   margin-bottom: 10px;
   display: flex;
   justify-content: space-between; 
@@ -210,7 +210,7 @@ html, body {
 .borrow-list {
   flex: 1;                 /* 撐滿剩下空間 */
   overflow-y: auto;        /* 垂直滾動 */
-  padding-right: 6px;      /* 避免 scrollbar 壓到內容 */
+  padding-right: 10px;      /* 避免 scrollbar 壓到內容 */
 }
 
 .borrow-name {
@@ -223,14 +223,31 @@ html, body {
   color: white;
   border: none;
   border-radius: 6px;
-  padding: 5px 12px;
+  padding: 6px 9px;
   font-size: 13px;
   cursor: pointer;
   transition: 0.2s;
+  font-weight: 600;
 }
 
 .return-btn:hover {
   background-color: #0c2a5b;
+  transform: scale(1.05);
+}
+
+.borrow-btn {
+  background-color: #0ea92d;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  padding: 6px 9px;
+  font-size: 13px;
+  cursor: pointer;
+  transition: 0.2s;
+  font-weight: 600;
+}
+.borrow-btn:hover {
+  background-color: #11912a;
   transform: scale(1.05);
 }
 
