--- a/src/components/AdminReservationList.css
+++ b/src/components/AdminReservationList.css
@@ -2,8 +2,9 @@
   text-align: left;
   background: #fff;
   border-radius: 12px;
-  padding: 16px;
+  padding: 12px;
   color: #0c2a5b;
+  margin-bottom: 20px;
 }
 
 .admin-list-wrapper h3 {
@@ -11,6 +12,7 @@
   font-size: 18px;
   font-weight: bold;
   margin-bottom: 10px;
+  margin-top: 0px;
 }
 
 .filter-bar {
